example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar-3.snap
---
source: example/src/repetitions.rs
expression: "grammar::parse(\"1, 2\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [
                Spanned {
                    value: Number {
                        v: 1,
                    },
                    span: Some(
                        (
                            0,
                            1,
                        ),
                    ),
                },
                Spanned {
                    value: Number {
                        v: 2,
                    },
                    span: Some(
                        (
                            3,
                            4,
                        ),
                    ),
                },
            ],
            span: Some(
                (
                    0,
                    4,
                ),
            ),
        },
    },
)
