example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar.snap
---
source: example/src/repetitions.rs
expression: "grammar::parse(\"\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [],
            ),
            start: 0,
            end: 0,
        },
    ],
)
