example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar2-3.snap
---
source: example/src/repetitions.rs
expression: "grammar2::parse(\"1 2\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [
                Spanned {
                    value: 1,
                    span: (
                        0,
                        1,
                    ),
                },
                Spanned {
                    value: 2,
                    span: (
                        2,
                        3,
                    ),
                },
            ],
            span: (
                0,
                3,
            ),
        },
    },
)
