example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar2.snap
---
source: example/src/repetitions.rs
expression: "grammar2::parse(\"\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: None,
        },
    },
)
