example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar3-4.snap
---
source: example/src/repetitions.rs
expression: "grammar3::parse(\"1,, 2\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [
                Spanned {
                    value: Some(
                        Number {
                            v: 1,
                        },
                    ),
                    span: (
                        0,
                        1,
                    ),
                },
                Spanned {
                    value: Some(
                        Number {
                            v: 2,
                        },
                    ),
                    span: (
                        4,
                        5,
                    ),
                },
            ],
            span: (
                0,
                5,
            ),
        },
        metadata: 123,
    },
)
